--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <script src="https://kit.fontawesome.com/e328476400.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:300,400,900|Secular+One&display=swap" rel="stylesheet">
-    <title>Raechel Odom</title>
+    <title>Portfolio (Raechel's Version)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
