--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <script src="https://kit.fontawesome.com/e328476400.js"></script>
+    <script
+      src="https://kit.fontawesome.com/e328476400.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
